# PyAgentKit

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  advanced_demo.py  agents.py  async_demo.py  cli.py  collaboration_demo.py  main.py  mcp_demo.py  monitor_demo.py  multi_agent_demo.py  p2_demo.py  pyproject.toml  requirements.txt  team_demo.py
.github/workflows/: ci.yml
configs/: example.yaml  report_generator.yaml  team_example.yaml
core/: __init__.py  agent.py  async_router.py  collaboration.py  config.py  llm.py  logging_config.py  mcp_tools.py  memory.py  memory_manager.py  message.py  monitor.py  orchestrator.py  router.py  session.py  team.py  tool_factory.py  tools.py  trace.py  vector_memory.py
docs/: 01_快速开始.md  02_Agent与ReAct循环.md  03_工具系统.md  04_记忆体系.md  05_消息路由.md  06_团队协作.md  07_异步流式与可观测.md  08_配置驱动与CLI.md  09_实战_研究报告生成器.md  README.md
tests/: conftest.py  test_agent.py  test_async_router.py  test_calculator.py  test_capabilities.py  test_config.py  test_memory.py  test_memory_manager.py  test_message.py  test_router.py  test_session.py  test_streaming_tokens.py  test_team.py  test_team_config.py  test_tools.py  test_trace.py  test_vector_memory.py
